--- a/style.css
+++ b/style.css
@@ -22,16 +22,6 @@ body {
   position: relative;
 }
 
-header,
-section,
-aside,
-footer {
-  margin: auto;
-  width: 375px;
-  position: absolute;
-  padding: 0 24px;
-}
-
 nav {
   left: 0;
   top: 0;
@@ -48,8 +38,11 @@ nav {
   z-index: 2;
 }
 
-header {
+section {
   display: flex;
+  margin: auto;
+  width: 375px;
+  position: absolute;
   flex-direction: column;
   align-items: flex-start;
   padding: 236px 24px 144px 24px;
@@ -59,6 +52,10 @@ header {
   left: calc(50% - (187.5px));
   overflow: hidden;
   background: #fff;
+  background-image: url(../Portfolio-setup-and-mobile-first/imgoverlay/header-shapes\ mobile@2x.svg);
+  background-repeat: no-repeat;
+  background-position-x: 0;
+  background-position-y: 100%;
 }
 
 nav .logo {
@@ -94,16 +91,15 @@ nav .logo a {
   flex-direction: row;
   gap: 24px;
   align-items: center;
-  justify-content: space-around;
   flex: none;
   order: 3;
   flex-grow: 0;
 }
 
-header h1 {
+section h1 {
   font-style: normal;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 44px;
   line-height: 52px;
   display: flex;
   align-items: center;
@@ -113,9 +109,11 @@ header h1 {
   flex-grow: 0;
   width: 300px;
   height: 150px;
+  letter-spacing: 0;
+  text-align: left;
 }
 
-header p {
+section p {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -128,7 +126,7 @@ header p {
   height: 150px;
 }
 
-header h3 {
+section h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -154,13 +152,4 @@ header h3 {
 
 .container h3 a:hover {
   color: red;
-}
-
-header > img {
-  position: absolute;
-  width: 462px;
-  height: 587.15px;
-  left: -34px;
-  top: 104px;
-  z-index: 0;
 }
